<resources>
    <string name="app_name">LRC Editor</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_here">That\'s-a-miss\nNo lyric files found</string>
    <string name="toolbar_refresh_icon">Refresh the list</string>
    <string name="toolbar_about_icon">About</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="lyrics_prompt_text">Paste the lyrics below</string>
    <string name="done_text">Done</string>
    <string name="default_timetext">00:00</string>
    <string name="prev_description">Button to go seek 5 seconds behind</string>
    <string name="play_description">Button to play/pause media</string>
    <string name="forward_description">Button to seek 5 seconds forward</string>
    <string name="previous_5_text"><![CDATA[5 <<]]></string>
    <string name="play_symbol">&#9654;</string>
    <string name="pause_symbol">&#9612;&#9612;</string>
    <string name="forward_5_text"><![CDATA[>> 5]]></string>
    <string name="tapToAddSong_prompt">Tap here to select a song</string>
    <string name="version_string">Version 1.05</string>
    <string name="author_string">Made with ♥\n(and a lot of code :p)</string>
    <string name="rate_and_feedback_string">This app is made and maintained by just me\nPlease rate the app and provide constructive feedback\n\n\nThank You!\n♥</string>
    <string name="toolbar_done_icon">Done</string>
    <string name="finalization_header">Finalization</string>
    <string name="song_name_prompt">Song Name:</string>
    <string name="album_name_prompt">Album Name:</string>
    <string name="artist_name_prompt">Artist Name:</string>
    <string name="composer_prompt">Composer:</string>
    <string name="default_time">00:00.00</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="processing_string">Processing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_location_description">Location for reading and saving lyric files:</string>
    <string name="save_location_button_text">Change this location</string>
    <string name="toolbar_settings_icon">Settings</string>
    <string name="save_text">Save</string>
    <string name="select_all_title">Select all</string>
    <string name="edit_lyric_title">Edit lyric</string>
    <string name="remove_title">Delete selected</string>
    <string name="remove_lyric_files_title">Remove lyric files</string>
    <string name="rename_lyric_file">Rename lyric file</string>
    <string name="add_lyric_before_selected_title">Add lyric before selected</string>
    <string name="add_lyric_after_selected_title">Add lyric after selected</string>
    <string name="add_before_prompt">Enter the lyric to add before the selected lyric: </string>
    <string name="add_after_prompt">Enter the lyric to add after the selected lyric: </string>
    <string name="edit_prompt">Enter the modified lyric:</string>
    <string name="add_before_positive_button_text">Add</string>
    <string name="edit_positive_button_text">Modify</string>
    <string name="add_after_positive_button_text">Add</string>
    <string name="add_before_hint">New lyric here</string>
    <string name="edit_lyrics_hint">Modified lyric here</string>
    <string name="new_file_name_prompt">Enter the new file name:</string>
    <string name="new_file_name_hint">New file name here</string>
    <string name="add_after_hint">New lyric here</string>
    <string name="batch_edit_lyrics">Batch edit lyrics</string>
    <string name="batch_edit_prompt">Offset for the timestamps of the selected lyrics</string>
    <string name="song_name_hint">Song name here</string>
    <string name="album_name_hint">Album name here</string>
    <string name="artist_name_hint">Artist name here</string>
    <string name="composer_name_hint">Composer name here</string>
    <string name="copy_lrc_contents_text">Copy LRC contents ⎘</string>
    <string name="copy_error_text">Copy error ⎘</string>
    <string name="title_error_message">An unexpected error occurred trying to set the title</string>
    <string name="add_a_lyric_text">Add a lyric</string>
    <string name="rate_and_review_text">Rate and Review the App</string>
    <string name="save_file_name_prompt">File name to save:</string>
    <string name="file_name_here_prompt">File name here</string>
    <string name="toolbar_feedback_icon">Send feedback</string>
    <string name="dev_email">cg.devworks@gmail.com</string>
</resources>
