<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_batch_edit"
        android:icon="@drawable/ic_batch_edit"
        android:orderInCategory="1"
        android:title="@string/batch_edit_lyrics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="2"
        android:title="@string/select_all_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="3"
        android:title="@string/edit_lyric_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="4"
        android:title="@string/remove_lyric_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_before"
        android:orderInCategory="5"
        android:title="@string/add_lyric_before_selected_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_after"
        android:orderInCategory="6"
        android:title="@string/add_lyric_after_selected_title"
        app:showAsAction="never" />

</menu>